@@ -94,6 +94,12 @@ Note: This is a change to what is displayed and the entries are not updated to p
 <table>
 <tbody>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="BR(3515692);return false;">3515692</a></td>
+<td>
+Fixed crash with Generate Password switching to default policy with > 1 named policy.
+</td>
+</tr>
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="BR(3514819);return false;">3514819</a></td>
 <td>Add Group now works again.</td>
 </tr>
